Fix: add support for hl.js in dark mode ( #53 )

--- a/client/index.scss
+++ b/client/index.scss
@@ -30,6 +30,7 @@
 .hljs{
   background-color: var(--bg2);
   overflow-x: unset!important;
+  color:var(--fg1)
 }
 
 .xterm{
